--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,11 @@
 {
   "name": "4-Player Score Keeper",
   "short_name": "Score Keeper",
-  "start_url": ".",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#111827",
   "description": "A simple score keeping app for four players.",
   "icons": [
     {
-      "src": "/vite.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/vite.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
-    }
-  ]
-}
+      "
